--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -19,6 +19,12 @@
 			<NavigationViewItem Icon="List" x:Uid="MainWindow_MainNavigationView_List" IsSelected="True"/>
 			<NavigationViewItem Icon="Setting" x:Uid="MainWindow_MainNavigationView_Settings"/>
 		</NavigationView.MenuItems>
-		<Frame x:Name="MainFrame"/>
+		<Frame x:Name="MainFrame">
+			<Frame.ContentTransitions>
+				<TransitionCollection>
+					<NavigationThemeTransition/>
+				</TransitionCollection>
+			</Frame.ContentTransitions>
+		</Frame>
 	</NavigationView>
 </Window>
