--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
 	x:Class="Spacious.ListPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -16,7 +16,7 @@
 		DisplayMode="Inline"
 	>
 		<SplitView.Pane>
-			<ListView x:Name="ReminderList">
+			<ListView x:Name="ReminderList" SelectionChanged="onSelectReminder">
 				<ListView.Header>
 					<Grid ColumnDefinitions="*, Auto" Margin="16,8,16,8">
 						<TextBlock
@@ -35,7 +35,7 @@
 					</Grid>
 				</ListView.Header>
 				<ListView.ItemTemplate>
-					<DataTemplate x:DataType="data:ReminderEntry">
+					<DataTemplate x:DataType="data:ReminderDisplayEntry">
 						<TextBlock Text="{x:Bind name}" x:Phase="1" Margin="0,5,0,5"/>
 					</DataTemplate>
 				</ListView.ItemTemplate>
@@ -43,4 +43,4 @@
 		</SplitView.Pane>
 		<Frame x:Name="DetailsPane"/>
 	</SplitView>
-</UserControl>
+</Page>
