--- a/NoReminderSelectedPage.xaml
+++ b/NoReminderSelectedPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
 	x:Class="Spacious.NoReminderSelectedPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -14,4 +14,4 @@
 		TextWrapping="Wrap"
 		Margin="16,16,16,16"
 	/>
-</UserControl>
+</Page>
