--- a/ReminderDetailsPage.xaml
+++ b/ReminderDetailsPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
 	x:Class="Spacious.ReminderDetailsPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -96,16 +96,27 @@
 						x:Name="CreateButton" x:Uid="ReminderDetailsPage_Create"
 						Style="{StaticResource AccentButtonStyle}"
 						Margin="8,0,0,0"
+						Click="onSave"
 					/>
 				</StackPanel>
 				<StackPanel Name="EditingButtons" Orientation="Horizontal">
-					<HyperlinkButton x:Uid="ReminderDetailsPage_RevertChanges" Margin="8,0,0,0"/>
+					<HyperlinkButton
+						x:Uid="ReminderDetailsPage_RevertChanges"
+						Margin="8,0,0,0"
+						Click="onRevertChanges"
+					/>
 					<Button
 						x:Name="SaveButton" x:Uid="ReminderDetailsPage_Save"
 						Style="{StaticResource AccentButtonStyle}"
 						Margin="8,0,0,0"
+						Click="onSave"
 					/>
-					<Button x:Uid="ReminderDetailsPage_Delete" Foreground="White" Background="Red" Margin="8,0,0,0">
+					<Button
+						x:Uid="ReminderDetailsPage_Delete"
+						Foreground="White" Background="Red"
+						Margin="8,0,0,0"
+						Click="onDelete"
+					>
 						<Button.Resources>
 							<ResourceDictionary>
 								<ResourceDictionary.ThemeDictionaries>
@@ -129,4 +140,4 @@
 			</StackPanel>
 		</Grid>
 	</Grid>
-</UserControl>
+</Page>
